hphp/hack/test/typecheck/naming_fail_foreach.php.exp
File "naming_fail_foreach.php", line 7, characters 8-9:
Variable $z is undefined, or not always defined (did you mean $x instead?) (Naming[2050])
