hphp/hack/test/typecheck/naming_fail_foreach.php
<?hh // partial

function f($x) {
  foreach ($x as $y) {
    $z = 1;
  }
  echo $z;
}
